# ChangeLog for games-fps/enemy-territory-fortress
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/enemy-territory-fortress/ChangeLog,v 1.11 2006/10/23 18:45:22 wolf31o2 Exp $

  23 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  enemy-territory-fortress-1.6-r2.ebuild:
  Added QA_TEXTRELS and permissions whacking from bug #133971 back into the
  new revision.

*enemy-territory-fortress-1.6-r2 (23 Oct 2006)

  23 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +enemy-territory-fortress-1.6-r2.ebuild:
  Added new revision for testing which uses the brand-spankin-new
  games-mods.eclass to reduce ebuild code.

  02 Oct 2006; Michael Sterrett <mr_bones_@gentoo.org>
  enemy-territory-fortress-1.6-r1.ebuild:
  QA_TEXTRELS and permission whacking (bug #133971)

  28 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  enemy-territory-fortress-1.6-r1.ebuild:
  Change to use the new liflg thirdpartymirror.

  31 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  enemy-territory-fortress-1.6-r1.ebuild:
  Changed nomirror to mirror and nostrip to strip.

  31 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -enemy-territory-fortress-1.2.ebuild,
  -enemy-territory-fortress-1.4.ebuild:
  Removing old versions.

*enemy-territory-fortress-1.6-r1 (27 Mar 2006)

  27 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -enemy-territory-fortress-1.6.ebuild,
  +enemy-territory-fortress-1.6-r1.ebuild:
  Revision bumped and closing bug #127523.

*enemy-territory-fortress-1.6 (22 Jul 2005)

  22 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +enemy-territory-fortress-1.6.ebuild:
  Version bump and closing bug #99905.

*enemy-territory-fortress-1.4 (23 Jun 2005)

  23 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +enemy-territory-fortress-1.4.ebuild:
  Version bumped and closing bug #90345.

*enemy-territory-fortress-1.2 (23 Feb 2005)
