@@ -2,32 +2,25 @@
 Hash: SHA1
 
 DIST etf_1.6-english-2.run 276814092 RMD160 29ec8948b0b0407db089b3fbe9bea2e9127558b4 SHA1 26ad51d2b2058be82d4aa26abe00fb941c3e8a96 SHA256 6be1e86922435fcddfe28d83210ac556497f65ea1f030e09459e82c888533975
-EBUILD enemy-territory-fortress-1.6-r1.ebuild 855 RMD160 f18d01e40324665097a1c1ad42c139e79181057e SHA1 8d77c80ed4d91a5816184d41e87524004b0490a8 SHA256 f1fad4962204641d71263f2526c2c14d999326e0b440c839e96d89d1608d26a7
-MD5 2776c45c729459b5676205b7d8ab5f0f enemy-territory-fortress-1.6-r1.ebuild 855
-RMD160 f18d01e40324665097a1c1ad42c139e79181057e enemy-territory-fortress-1.6-r1.ebuild 855
-SHA256 f1fad4962204641d71263f2526c2c14d999326e0b440c839e96d89d1608d26a7 enemy-territory-fortress-1.6-r1.ebuild 855
-EBUILD enemy-territory-fortress-1.6-r2.ebuild 1154 RMD160 baf3ecb7aad2892183e352aa238a28a196a5b387 SHA1 0ae92b859336fb5504c84043dace03b97749a9ae SHA256 c79d41523ca9510f9f5ba119347f49162f6ceca9e7ed85d56429936e30f9eba8
-MD5 f099b0ed93d0e34a6ebc2f878f84514a enemy-territory-fortress-1.6-r2.ebuild 1154
-RMD160 baf3ecb7aad2892183e352aa238a28a196a5b387 enemy-territory-fortress-1.6-r2.ebuild 1154
-SHA256 c79d41523ca9510f9f5ba119347f49162f6ceca9e7ed85d56429936e30f9eba8 enemy-territory-fortress-1.6-r2.ebuild 1154
-MISC ChangeLog 2259 RMD160 2291188593e6c8bc50f710a14ad9258e43b969ea SHA1 08cf591b6318e39e59a79c2be0eba0d79b946e84 SHA256 40ba7e5b02b992f9fa70e5e508168dc4d71695e1e1f530c33229346aff7a41d9
-MD5 6b64a5563ea2a6a338c8aa0afbdb13ed ChangeLog 2259
-RMD160 2291188593e6c8bc50f710a14ad9258e43b969ea ChangeLog 2259
-SHA256 40ba7e5b02b992f9fa70e5e508168dc4d71695e1e1f530c33229346aff7a41d9 ChangeLog 2259
+EBUILD enemy-territory-fortress-1.6-r2.ebuild 1131 RMD160 c8528b4317661912b8d1153de9e79b9ba2c2eff9 SHA1 84906f2f2121343da08205fb45354d46a490b830 SHA256 694a9e512d842220b38d6cc029619db5b73fba3ab92d88f106c2a3574827d005
+MD5 e3c4d630d88ead9d7150e284cc561290 enemy-territory-fortress-1.6-r2.ebuild 1131
+RMD160 c8528b4317661912b8d1153de9e79b9ba2c2eff9 enemy-territory-fortress-1.6-r2.ebuild 1131
+SHA256 694a9e512d842220b38d6cc029619db5b73fba3ab92d88f106c2a3574827d005 enemy-territory-fortress-1.6-r2.ebuild 1131
+MISC ChangeLog 2438 RMD160 fbcfc51ae5a60c4a591a8e40be2e1d6f7b8fd8a0 SHA1 2c7d924049edb55df4c21b1254907e6412d36932 SHA256 1e35c10cd084bd0889cc613b8fec61942ed35464dfec48f009442793a7c1b968
+MD5 3ed5806f80ef61e3ce93d3276e0168a7 ChangeLog 2438
+RMD160 fbcfc51ae5a60c4a591a8e40be2e1d6f7b8fd8a0 ChangeLog 2438
+SHA256 1e35c10cd084bd0889cc613b8fec61942ed35464dfec48f009442793a7c1b968 ChangeLog 2438
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea metadata.xml 158
 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 metadata.xml 158
-MD5 241889c62783270b0ef5b6afb657ee59 files/digest-enemy-territory-fortress-1.6-r1 253
-RMD160 699c44999a29ea1ad49c656100e175919e5a69fe files/digest-enemy-territory-fortress-1.6-r1 253
-SHA256 a14bc1dd1e36017516fe41f7f8eb14b31a551d2749df9dd1fb04395e25ab49c6 files/digest-enemy-territory-fortress-1.6-r1 253
 MD5 241889c62783270b0ef5b6afb657ee59 files/digest-enemy-territory-fortress-1.6-r2 253
 RMD160 699c44999a29ea1ad49c656100e175919e5a69fe files/digest-enemy-territory-fortress-1.6-r2 253
 SHA256 a14bc1dd1e36017516fe41f7f8eb14b31a551d2749df9dd1fb04395e25ab49c6 files/digest-enemy-territory-fortress-1.6-r2 253
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.5 (GNU/Linux)
+Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFFPQ3pkT4lNIS36YERAmC0AKCm1gJX7e4RPyN9Fw84PZKr92BDiQCeOXE3
-uwx7zW9kSYazAeo4sC0ca2M=
-=nCfI
+iD8DBQFHMODNkT4lNIS36YERAnnrAKDC1oEwOUjRRFLR49548USQnInC+gCfYz27
+BUB+urAacl1PnrAzcYNUMYM=
+=L6yi
 -----END PGP SIGNATURE-----
