@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/enemy-territory-fortress/Attic/enemy-territory-fortress-1.6-r2.ebuild,v 1.2 2006/10/23 18:45:22 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/enemy-territory-fortress/Attic/enemy-territory-fortress-1.6-r2.ebuild,v 1.3 2007/11/06 21:46:39 wolf31o2 Exp $
 
 MOD_DESC="a class-based teamplay modification"
 MOD_NAME="Fortress"
@@ -12,7 +12,7 @@ GAME="enemy-territory"
 inherit eutils games games-mods
 
 HOMEPAGE="http://www.etfgame.com/"
-SRC_URI="http://www.etf-center.com/files/etf_${PV}-english-2.run
+SRC_URI="http://www.sonnensturm.net/download/etf_${PV}-english-2.run
 	http://www.playlinux.net/files/native/etf_${PV}-english-2.run
 	http://liflg.httpdnet.com/files/native/etf_${PV}-english-2.run
 	http://www.sonnensturm.net/download/etf_${PV}-english-2.run"
@@ -20,8 +20,6 @@ SRC_URI="http://www.etf-center.com/files/etf_${PV}-english-2.run
 RDEPEND="games-fps/${GAME}"
 
 QA_TEXTRELS="${GAMES_PREFIX_OPT:1}/${GAME}/etf/omnibot_etf.so"
-
-KEYWORDS="-* ~amd64 ~x86"
 
 src_unpack() {
 	# This is a prime example of how we should do our src_unpack for a mod that
