@@ -1,3 +1,0 @@
-MD5 235b1a7e8153b1c0ed422f775d25d3ac etf_1.6-english-2.run 276814092
-RMD160 29ec8948b0b0407db089b3fbe9bea2e9127558b4 etf_1.6-english-2.run 276814092
-SHA256 6be1e86922435fcddfe28d83210ac556497f65ea1f030e09459e82c888533975 etf_1.6-english-2.run 276814092
