@@ -1,6 +1,11 @@
 # ChangeLog for games-fps/enemy-territory-fortress
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/enemy-territory-fortress/ChangeLog,v 1.11 2006/10/23 18:45:22 wolf31o2 Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/enemy-territory-fortress/ChangeLog,v 1.12 2007/11/06 21:46:39 wolf31o2 Exp $
+
+  06 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
+  -enemy-territory-fortress-1.6-r1.ebuild,
+  enemy-territory-fortress-1.6-r2.ebuild:
+  Stable on amd64/x86 wrt bug #195356.
 
   23 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   enemy-territory-fortress-1.6-r2.ebuild:
